# financial-anomaly-detection

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: app.py
data/: generate_data.py
notebooks/: analysis.ipynb
src/: __init__.py  anomaly_detection.py  data_preprocessing.py  feature_engineering.py
